@@ -14,6 +14,7 @@ Fixed bugs
 - fixed update of consssorted flags in a variable expressions data when adding an additional constraint using this variable
 - corrected computation of number of variables affected by symmetry
 - fixed computation of symmetry group size
+- correct equality comparisons in checkRedundancySide() of cons_varbound.c to ensure pair redundancy
 
 Build system
 ------------
